--- a/css/main.css
+++ b/css/main.css
@@ -1,49 +1,103 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700);
 body {
   font-family: "Open Sans", sans-serif;
+  font-size: 0.9em;
 }
 
-#page .container {
+.container {
   *zoom: 1;
-  max-width: 77em;
-  _width: 77em;
-  padding-left: 1em;
-  padding-right: 1em;
+  max-width: 365px;
+  _width: 365px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
-#page .container:after {
+.container:after {
   content: "";
   display: table;
   clear: both;
 }
-#page header {
+@media (min-width: 555px) {
+  .container {
+    max-width: 555px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+@media (min-width: 745px) {
+  .container {
+    max-width: 745px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+@media (min-width: 1125px) {
+  .container {
+    max-width: 1125px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+header {
   width: 100%;
+  background: white;
+  z-index: 1;
+  position: relative;
+}
+header > .container {
   padding: 1em 0;
-  background: #f0f0f0;
 }
-#page header .branding-left {
-  width: 24.02597%;
+header > .container .branding-left {
+  width: 24%;
   float: left;
-  margin-right: 1.2987%;
+  margin-right: 1.33333%;
   display: inline;
-  margin-left: 8.44156%;
   height: 3.5em;
 }
-#page header .navigation {
+header > .container .navigation {
   height: 3.5em;
-  width: 40.90909%;
+  width: 40.88889%;
   float: left;
-  margin-right: 1.2987%;
+  margin-right: 1.33333%;
   display: inline;
 }
-#page header .navigation nav > ul > li {
-  margin-right: 20px;
+header > .container .navigation .menu > ul {
+  margin: 0;
+  padding: 0;
 }
-#page header .navigation nav > ul > li:last-child {
+header > .container .navigation .menu > ul > li {
+  float: left;
+  display: inline;
+  margin: 0 20px 0 0;
+  padding: 0;
+}
+header > .container .navigation .menu > ul > li:last-child {
   margin-right: 0;
 }
-#page header .navigation nav > ul > li > a {
+header > .container .navigation .menu > ul > li > a {
   font-size: 0.9em;
   font-weight: 600;
   color: #111111;
@@ -52,25 +106,80 @@ body {
   height: 3.5;
   display: block;
 }
-#page header .branding-right {
-  width: 15.58442%;
+header > .container .navigation .menu > ul > li > ul {
+  display: none;
+}
+header > .container .branding-right {
+  width: 24%;
   float: right;
   margin-right: 0;
-  *margin-left: -1em;
+  *margin-left: -15px;
   display: inline;
-  margin-right: 8.44156%;
   text-align: right;
 }
-#page .twocolumns .sidebar {
-  width: 24.02597%;
-  float: right;
-  margin-right: 0;
-  *margin-left: -1em;
+header .sub-navigation {
+  display: none;
+  padding: 20px 0;
+  text-align: center;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0f0f0), color-stop(100%, #d6d6d6));
+  background-image: -webkit-linear-gradient(#f0f0f0, #d6d6d6);
+  background-image: -moz-linear-gradient(#f0f0f0, #d6d6d6);
+  background-image: -o-linear-gradient(#f0f0f0, #d6d6d6);
+  background-image: linear-gradient(#f0f0f0, #d6d6d6);
+  -webkit-box-shadow: #e1e1e1 0 0 2px;
+  -moz-box-shadow: #e1e1e1 0 0 2px;
+  box-shadow: #e1e1e1 0 0 2px;
+  -webkit-box-shadow: #e1e1e1 0 0 2px;
+  -moz-box-shadow: #e1e1e1 0 0 2px;
+  box-shadow: #e1e1e1 0 0 2px;
+}
+
+@media (min-width: 555px) {
+  header .sub-navigation {
+    display: block;
+  }
+}
+.main-content {
+  background-color: white;
+}
+
+footer.closure {
+  background-color: #252525;
+  color: #e1e1e1;
+  padding: 60px 0;
+}
+footer.closure-bottom {
+  background-color: #171717;
+  color: #444444;
+  padding: 30px 0;
+}
+footer.closure-bottom .container span:first-child {
+  font-size: 0.8em;
+  width: 74.66667%;
+  float: left;
+  margin-right: 1.33333%;
   display: inline;
 }
-#page .twocolumns .content {
-  width: 74.67532%;
+footer.closure-bottom .container span:last-child {
+  font-size: 0.8em;
+  width: 24%;
+  float: right;
+  margin-right: 0;
+  *margin-left: -15px;
+  display: inline;
+  text-align: right;
+}
+
+.twocolumns .sidebar {
+  width: 24%;
+  float: right;
+  margin-right: 0;
+  *margin-left: -15px;
+  display: inline;
+}
+.twocolumns .content {
+  width: 74.66667%;
   float: left;
-  margin-right: 1.2987%;
+  margin-right: 1.33333%;
   display: inline;
 }
