--- a/css/main.css
+++ b/css/main.css
@@ -1876,6 +1876,57 @@ a .icon-rotate-90:before, a .icon-rotate-180:before, a .icon-rotate-270:before, 
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 0.9em;
+  line-height: 1.5em;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  height: auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  line-height: 1.1;
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 2em;
+}
+
+h5 {
+  font-size: 0.9em;
+}
+
+h6 {
+  font-size: 1em;
 }
 
 .container {
@@ -1935,17 +1986,67 @@ body {
   }
 }
 
+.top-headline {
+  color: #bbbbbb;
+  font-size: 0.9em;
+  margin-bottom: 10px;
+}
+
+.lead {
+  font-weight: bold;
+  font-size: 1.1em;
+  line-height: 1.1em;
+  margin-bottom: 10px;
+}
+
+.kicker {
+  display: inline-block;
+  padding: 2px 5px;
+  background: #bbbbbb;
+  margin-right: 5px;
+  border-radius: 2px;
+  color: white;
+  font-size: 0.9em;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.flexslider {
+  border: none;
+}
+
+.flex-direction-nav a {
+  color: white;
+  padding-top: 10px;
+  height: 27px;
+}
+
 header {
   width: 100%;
   background: white;
   z-index: 1;
   position: relative;
+  box-shadow: 0 0 3px #444444;
 }
 header > .container {
   padding: 1em 0;
 }
 header > .container .branding-left {
   margin-bottom: 5px;
+}
+header > .container .branding-left button.navigation-toggle {
+  display: block;
+  float: right;
+  font-size: 1.5em;
+  padding: 5px 10px;
+  background-color: #eeeeee;
+  color: #60ad5f;
+  border: 7px solid white;
+}
+header > .container .branding-left button.navigation-toggle:hover {
+  background-color: #e1e1e1;
+  color: #252525;
+  border: 7px solid #eeeeee;
 }
 header > .container .navigation.collapsed {
   display: none;
@@ -1971,7 +2072,7 @@ header > .container .navigation .menu > ul > li > a {
   text-decoration: none;
 }
 header > .container .navigation .menu > ul > li > a:hover {
-  background-color: #444444;
+  background-color: #d6d6d6;
   color: white;
 }
 header > .container .navigation .menu > ul > li > ul {
@@ -1994,7 +2095,7 @@ header > .container .navigation .menu > ul > li > ul > li > a {
   text-decoration: none;
 }
 header > .container .navigation .menu > ul > li > ul > li > a:hover {
-  background-color: #444444;
+  background-color: #d6d6d6;
   color: white;
 }
 header > .container .branding-right {
@@ -2017,6 +2118,58 @@ header .sub-navigation {
   box-shadow: #e1e1e1 0 0 2px;
 }
 
+.main-content {
+  background-color: white;
+  margin-bottom: 15px;
+}
+
+footer.closure {
+  background-color: #252525;
+  color: #e1e1e1;
+  padding: 30px 0;
+}
+footer.closure .container {
+  text-align: center;
+}
+footer.closure-bottom {
+  background-color: #171717;
+  color: #444444;
+  padding: 30px 0;
+}
+footer.closure-bottom .container span {
+  display: block;
+  font-size: 0.8em;
+  text-align: center;
+}
+footer.closure-bottom .container span:first-child {
+  margin-bottom: 5px;
+}
+
+@media (min-width: 745px) {
+  footer.closure {
+    background-color: #252525;
+    color: #e1e1e1;
+    padding: 60px 0;
+  }
+  footer.closure-bottom {
+    background-color: #171717;
+    color: #444444;
+    padding: 30px 0;
+  }
+  footer.closure-bottom .container span:first-child {
+    font-size: 0.8em;
+    width: 74.66667%;
+    float: left;
+    margin-right: 1.33333%;
+  }
+  footer.closure-bottom .container span:last-child {
+    font-size: 0.8em;
+    width: 24%;
+    float: right;
+    margin-right: 0;
+    text-align: right;
+  }
+}
 @media (min-width: 745px) {
   header .sub-navigation {
     display: block;
@@ -2075,50 +2228,64 @@ header .sub-navigation {
     text-align: right;
   }
 }
-button.navigation-toggle {
-  display: block;
-  float: right;
-  font-size: 1.5em;
-  padding: 5px 10px;
-  background-color: #eeeeee;
-  color: green;
-  border: 7px solid white;
+ul.tabs li {
+  padding: 0;
 }
-button.navigation-toggle:hover {
-  background-color: #444444;
+ul.tabs li.active a {
+  border-bottom: 1px solid #07607a;
+}
+ul.tabs li a {
+  font-size: 14px;
+  padding: 0.5em 1.5em;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF60AD5F', endColorstr='#FF396E38');
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(50%, #7bbb7a), color-stop(51%, #60ad5f));
+  background: -webkit-linear-gradient(#7bbb7a 50%, #60ad5f 51%);
+  background: -moz-linear-gradient(#7bbb7a 50%, #60ad5f 51%);
+  background: -o-linear-gradient(#7bbb7a 50%, #60ad5f 51%);
+  background: linear-gradient(#7bbb7a 50%, #60ad5f 51%);
+  -webkit-box-shadow: #add5ad 0 1px 0 inset;
+  -moz-box-shadow: #add5ad 0 1px 0 inset;
+  box-shadow: #add5ad 0 1px 0 inset;
+  border: 1px solid #4c8c1d;
   color: white;
-  border: 7px solid #eeeeee;
+  text-shadow: #315f31 0 -1px 0;
+  border-radius: 5px 5px 0 0;
+  padding: 0.2em 0.5em;
 }
-
-.main-content {
-  background-color: white;
+ul.tabs li a:hover {
+  text-decoration: none;
 }
-
-footer.closure {
-  background-color: #252525;
-  color: #e1e1e1;
-  padding: 60px 0;
+ul.tabs li a:hover {
+  background-color: #48831b;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(50%, #63af62), color-stop(51%, #48831b));
+  background: -webkit-linear-gradient(#63af62 50%, #48831b 51%);
+  background: -moz-linear-gradient(#63af62 50%, #48831b 51%);
+  background: -o-linear-gradient(#63af62 50%, #48831b 51%);
+  background: linear-gradient(#63af62 50%, #48831b 51%);
 }
-footer.closure-bottom {
-  background-color: #171717;
-  color: #444444;
-  padding: 30px 0;
+ul.tabs li a:active {
+  -webkit-box-shadow: #457f1a 0 1px 2px inset;
+  -moz-box-shadow: #457f1a 0 1px 2px inset;
+  box-shadow: #457f1a 0 1px 2px inset;
 }
-footer.closure-bottom .container span:first-child {
-  font-size: 0.8em;
-  width: 74.66667%;
-  float: left;
-  margin-right: 1.33333%;
-  display: inline;
+ul.tabs li a.disabled, ul.tabs li a[disabled] {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  opacity: 0.6;
+  background: #58a121;
+  cursor: default;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
-footer.closure-bottom .container span:last-child {
-  font-size: 0.8em;
-  width: 24%;
-  float: right;
-  margin-right: 0;
-  *margin-left: -15px;
-  display: inline;
-  text-align: right;
+ul.tabs li a::-moz-focus-inner {
+  padding: 0 !important;
+  margin: -1px !important;
 }
 
 .twocolumns .sidebar {
