--- a/sass/main.scss
+++ b/sass/main.scss
@@ -182,6 +182,7 @@ h6 { font-size: ceil($font-size * 0.85); }
   border: none;
 }
 .flex-direction-nav {
+  display: none;
   a {
     color: $white;
     padding-top: 10px;
