--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,7 @@ $darkergrey:              #171717;
 $darkgrey:                #252525;
 $dark2darkergrey:         #333333;
 $grey:                    #444444;
+$alittlegrey:             #797979;
 $somewhatbrightgrey:      #bbbbbb;
 $brightgrey:              #d6d6d6;
 $lightgrey:               #e1e1e1;
@@ -152,6 +153,116 @@ h6 { font-size: ceil($font-size * 0.85); }
   }
 }
 
+.content-top .field.field-type-file {
+   position: relative;
+   .main-content {
+     margin-bottom: 30px;
+     .file-display {
+       img {
+         width: 100%;
+         height: auto;
+         display: block;
+       }
+     } 
+   }
+  .inline-text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    opacity: 0.7;
+    color: $white;
+    background: $black;
+    border-radius: 3px 0 0 3px;
+    & > div {
+      padding: 10px;
+      background: $black;
+      border-radius: 3px 0 0 3px;
+      float: left;
+      &:first-child {
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
+.author-content {
+  border-top: 1px solid $brightgrey;
+  padding-top: 30px;
+  margin-top: 30px;
+  border-bottom: 1px solid $brightgrey;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  .image {
+    margin-bottom: 30px;
+    img {
+      width: 100%;
+      border-radius: 100%;
+    }
+  }
+  .description {
+    color: $black;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin-bottom: 30px;
+    .field-type-text-long {
+      font-weight: normal;
+      color: $alittlegrey;
+    }
+  }
+  .publishinfo {
+    font-size: 0.9em;
+    h2 {
+      font-size: 0.9em;
+      font-weight: bold;
+      margin-bottom: 0;
+    }
+  }
+}
+
+@include at-breakpoint($tablet) {
+  .author-content {
+    overflow: hidden;
+    border-top: 1px solid $brightgrey;
+    padding-top: 30px;
+    margin-top: 30px;
+    border-bottom: 1px solid $brightgrey;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    .image {
+      float:left;
+      width: 12%;
+      margin-right:2%;
+      margin-bottom: 0;
+      img {
+        width: 100%;
+        border-radius: 100%;
+      }
+    }
+    .description {
+      float:left;
+      width: 60%;
+      padding: 0 3%;
+      color: $black;
+      font-size: 0.9em;
+      font-weight: bold;
+      margin-bottom: 0;
+      .field-type-text-long {
+        color: $alittlegrey;
+        font-weight: normal;
+      }
+    }
+    .publishinfo {
+      float: left;
+      width: 20%;
+      font-size: 0.9em;
+      h2 {
+        font-size: 0.9em;
+        font-weight: bold;
+        margin-bottom: 0;
+      }
+    }
+  }  
+}
 
 
 .top-headline {
@@ -292,16 +403,15 @@ header {
 
 .main-content {
   background-color: $white;
-  margin-bottom: 15px;
+  margin-bottom: 50px;
 }
-
 
 
 footer {
   &.closure {
     background-color: $darkgrey;
     color: $lightgrey;
-    padding: 30px 0;
+    padding: 50px 0;
     .container {
       text-align: center;
     }
@@ -351,7 +461,7 @@ footer {
 }
 
 
-  @include at-breakpoint(8) {
+@include at-breakpoint(8) {
   header {
     .sub-navigation {
       display: block;
