--- a/css/main.css
+++ b/css/main.css
@@ -2255,6 +2255,13 @@ footer.closure-bottom .container span {
 footer.closure-bottom .container span:first-child {
   margin-bottom: 5px;
 }
+footer.closure-bottom .container span:nth-child(2) {
+  white-space: nowrap;
+}
+footer.closure-bottom .container span a {
+  color: #e1e1e1;
+  text-decoration: underline;
+}
 
 @media (min-width: 745px) {
   footer.closure {
@@ -2285,7 +2292,7 @@ footer.closure-bottom .container span:first-child {
   header .sub-navigation {
     display: block;
   }
-  header button.navigation-toggle {
+  header > .container .branding-left button.navigation-toggle {
     display: none;
     margin-bottom: 10px;
   }
@@ -2300,7 +2307,7 @@ footer.closure-bottom .container span:first-child {
   }
   header > .container .navigation {
     height: 3.5em;
-    width: 40.88889%;
+    width: 66.22222%;
     float: left;
     margin-right: 1.33333%;
   }
@@ -2323,17 +2330,22 @@ footer.closure-bottom .container span:first-child {
   header > .container .navigation .menu > ul > li > a {
     font-size: 0.9em;
     font-weight: 600;
-    color: #111111;
-    line-height: 3.5em;
-    vertical-align: middle;
-    height: 3.5;
+    color: #171717;
+    line-height: 1em;
+    padding: 1.75em 0.5em;
+    border: none;
     display: block;
+    background: none;
+  }
+  header > .container .navigation .menu > ul > li > a:hover {
+    background: none;
+    color: #111111;
   }
   header > .container .navigation .menu > ul > li > ul {
     display: none;
   }
   header > .container .branding-right {
-    width: 24%;
+    width: 7.11111%;
     float: right;
     margin-right: 0;
     text-align: right;
